# utilities-box-mcp-server

./: .gitignore  README.md  kill.bat  killall.cmd  pyproject.toml  pytools.sh
docker/0.1.0/: Dockerfile  build.sh  run-in-docker.sh  run-utilities-box-mcp-server-in-docker.cmd  run-utilities-box-mcp-server-in-docker.sh
src/utilities_box_mcp_server/: __init__.py  __main__.py  logger.py  server.py  server.py.bak  tools.py
src/utilities_box_mcp_server/schema/: GenerateUUIDResult.py  GetCurrentTimeResult.py  ReadFilesResult.py  ReadLinesResult.py  __init__.py  exceptions.py
tests/: sse_demo.py  stdio_demo.py  test_calc_time_diff.py  test_do_read_lines.py  test_do_read_lines_negative.py  test_evaluate.py  test_generate_uuid.py  test_get_current_time.py  test_get_system_info.py  test_get_system_stats.py  test_get_unix_timestamp.py  test_ping.py  test_read_files.py  test_sleep.py
